# ada

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  test_build.sh
.github/workflows/: ci.yml
service/: Dockerfile  alembic.ini  app.py  chat.py  chat_template.txt  database.py  main.py  middleware.py  pyproject.toml  requirements.txt  run.sh
service/ai/: api.py  openai.default.ejs  openai.py  openai.select_tables.ejs  openai.trained.ejs  openai.where.ejs
service/back/: api.py  datalake.py  models.py  session.py
service/chat/: api.py  api_test.py  chat.py  chat_template.txt  chat_template2.txt  chatgpt.py  chatgpt_test.py  cli.py  datachat.py  datachat2_test.py  datachat_test.py  dbt_utils.py  lock.py  memory_utils.py  notes.py  render.py  sql_utils.py  utils.py  utils.test.py  utils_test.py
service/chat/functions/: MEMORY_SEARCH.json  PLOT_WIDGET.json  SAVE_TO_MEMORY.json  SEARCH_IN_MEMORY.json  SQL_QUERY.json  SUBMIT.json
service/data/sample/: create.py  sample.sql  sample.sqlite
service/migrations/: env.py
service/migrations/versions/: 006f21a18554_add_isanswer.py  04c991f0d2ae_add_project_fix_createdat_updatedat.py  0e933f6adc06_add_dbt_columns.py  2af9b2c6c9ea_add_reqid.py  4a0f8721eb48_add_functioncallid.py  4b610242919c_create_admin_user.py  5642e37ccbfa_remove_display_column.py  5f9469b957c8_add_image.py  84dcd574f1c2_add_project.py  94e7e7175204_remove_prediction_table.py  961090ec9af1_add_database_safe_privacy_mode.py  964d8451f1ba_add_createdat_updatedat.py  993871236cde_add_note.py  a167337af939_add_tables_metadata.py  b7c451b82bc1_make_query_colum_optional.py  bb9fe32018b6_add_memory.py  bdcf2c6aa3a6_create_sample_database.py  e230a2ea7169_clean_column_name.py  f5da7bf41365_init.py
view/: .env  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
view/src/: App.vue  main.ts  router.ts
view/src/assets/: main.css
view/src/components/: BaseAlert.vue  BaseBuilder.vue  BaseButton.vue  BaseEditor.vue  BaseEditorPreview.vue  BaseField.vue  BaseInput.vue  BaseMultiSelect.vue  BaseNotification.vue  BaseQuery.vue  BaseSearch.vue  BaseSelector.vue  BaseSwitch.vue  BaseTable.vue  BaseTabs.vue  BaseUpload.vue  Chart.vue  Chat.vue  Query.vue  (+9 more)
(+18 files in other folders)
