[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["benderv <benderville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
requests = "^2.28.2"
SQLAlchemy = "^2.0.6"
Flask = "^2.2.3"
Flask-SocketIO = "^5.3.3"
diskcache = "^5.4.0"
snowflake-connector-python = "^3.0.1"
psycopg2-binary = "^2.9.7"
pgvector = "0.1.8"
alembic = "^1.11.2"
autochat = {url = "https://files.pythonhosted.org/packages/7a/0e/fb9ac6f79d1633b24631ed3f19f783af74742b9b03bdc69d01828e08570e/autochat-0.1.7-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
