[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["benderv <benderville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
SQLAlchemy = "^2.0.6"
Flask = "^2.2.3"
Flask-SocketIO = "^5.3.3"
diskcache = "^5.4.0"
snowflake-connector-python = "^3.0.1"
psycopg2-binary = "^2.9.7"
pgvector = "0.1.8"
alembic = "^1.11.2"
autochat = {url = "https://files.pythonhosted.org/packages/34/a1/a8ba27ae82e976d4aa7c7f372b2280947170ded96e91129bb0aaa04f1bb6/autochat-0.1.10-py3-none-any.whl"}
openai = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
