[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["benderv <benderville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
SQLAlchemy = "^2.0.6"
Flask = "^2.2.3"
Flask-SocketIO = "^5.3.3"
diskcache = "^5.4.0"
snowflake-connector-python = "^3.0.1"
psycopg2-binary = "^2.9.7"
pgvector = "0.1.8"
alembic = "^1.11.2"
autochat = {extras = ["all"], version = "^0.3.3"}
openai = "1.26.0"
pydantic = "1.10.13"
pyyaml = "6.0.1"
mysqlclient = {version = "^2.2.1", optional = true}
playwright = "^1.46.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]
snowflake = ["snowflake-connector-python"]
all = ["mysql", "snowflake"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
